--- a/slides/09-glm/glm.Rmd
+++ b/slides/09-glm/glm.Rmd
@@ -98,7 +98,7 @@ where $\nu$ is the shape parameter and $\lambda$ is the scale parameter. For the
 $$
   f(y) = \frac{1}{\Gamma(\nu)} \left( \frac{\nu}{\mu} \right)^{\nu} y^{\nu - 1} e^{-y\nu / \mu} = \exp \left\{ \frac{- y \mu^{-1} - \log \mu}{\nu^{-1}} + (\nu-1) \log y + \nu \log \nu - \log \Gamma(\nu) \right\}.
 $$
-Now $\mathbb{E}Y = \mu$ and $\mathbb{Var}(Y) = \mu^2 / \nu = (\mathbb{E} Y)^2 / \nu$. So we have
+Now $\mathbb{E}Y = \mu$ and $\operatorname{Var}(Y) = \mu^2 / \nu = (\mathbb{E} Y)^2 / \nu$. So we have
 \begin{eqnarray*}
   \theta &=& - \mu^{-1} \\
   \phi &=& \nu^{-1} \\
@@ -115,22 +115,22 @@ Some books remove the minus sign in the canonical parameter/link which is fine p
 Exponential family distributions have mean and variance
 \begin{eqnarray*}
   \mathbb{E}Y &=& \mu = b'(\theta) \\
-  \mathbb{Var}Y &=& \sigma^2 = b''(\theta) a(\phi).
+  \operatorname{Var}Y &=& \sigma^2 = b''(\theta) a(\phi).
 \end{eqnarray*}
-**Show this!** Thus the function $b$ determines the moments of $Y$.
+**Show this in HW3**. Thus the function $b$ determines the moments of $Y$.
 
 ## Link function
 
 - Given the **linear predictor** or **systematic component**
 $$
-  \eta = \beta_0 + x_1 \beta_1 + \cdots + x_p \beta_p = \mathbf{x}^T \boldsymbol{\beta},
+  \eta = \mathbf{x}^T \boldsymbol{\beta},
 $$
-The **link function**, $g$, relates the mean $\mathbb{E} Y = \mu$ to the covariates
+the **link function**, $g$, relates the mean $\mathbb{E} Y = \mu$ to the covariates
 $$
   \eta = g(\mu).
 $$
 
-- In principal, any monotone continuous and differentiable function will do. But there are some convenient and common choices for the standard GLMs.
+- In principal, any monotone, continuous, and differentiable function can be a link function. But there are some convenient and common choices for the standard GLMs.
 
     * For Gaussian linear model, the identity link, $\eta = \mu$, is the obvious choice.  
     
@@ -138,7 +138,7 @@ $$
     
     * For Poisson model, a standard choice is $\eta = \log \mu$.  
 
-- The **canonical link** has $g$ such that $\eta = g(\mu) = \theta$, the canonical parameter of the exponential family distribution. This means that $g(b'(\theta))=\theta$. If a canonical link is used, $\mathbf{x}^T \mathbf{y}$ is sufficient for $\beta$. The canonical link is mathematically and computationally convenient and is often the natural choice of link.
+- The **canonical link** has $g$ such that $\eta = g(\mu) = \theta$, the canonical parameter of the exponential family distribution. This means that $g(b'(\theta))=\theta$. If a canonical link is used, $\mathbf{X}^T \mathbf{y}$ is sufficient for $\boldsymbol{\beta}$. The canonical link is mathematically and computationally convenient and is often the natural choice of link.
 
 | Family           | Canonical Link                          | Variance Function |
 |------------------|-------------------------------|-------------------|
@@ -150,9 +150,9 @@ $$
 
 ## Fisher scoring algorithm and IRWLS
 
-- GLM regreesion coefficients are estimated by MLE. Recall that the Newton-Raphson algorithm for maximizing a log-likelihood $L(\beta)$ proceeds as
+- GLM regreesion coefficients are estimated by MLE. Recall that the Newton-Raphson algorithm for maximizing a log-likelihood $\ell(\boldsymbol{\beta})$ proceeds as
 $$
-  \beta^{(t+1)} = \beta^{(t)} + s [- \nabla^2 L(\beta^{(t)})]^{-1} \nabla L(\beta^{(t)}),
+  \boldsymbol{\beta}^{(t+1)} = \boldsymbol{\beta}^{(t)} + s [- \nabla^2 \ell(\boldsymbol{\beta}^{(t)})]^{-1} \nabla \ell(\boldsymbol{\beta}^{(t)}),
 $$
 where $s>0$ is a step length, $\nabla L$ is the score (gradient) vector, and $-\nabla^2L$ is the observed information matrix (negative Hessian). 
 
@@ -162,13 +162,13 @@ where $s>0$ is a step length, $\nabla L$ is the score (gradient) vector, and $-\
   \nabla \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \frac{(y_i - \mu_i) \mu_i'(\eta_i)}{\sigma_i^2} \mathbf{x}_i \\
   - \nabla^2 \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \frac{[\mu_i'(\eta_i)]^2}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T - \sum_{i=1}^n \frac{(y_i - \mu_i) \theta_i''(\eta_i)}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T
 \end{eqnarray*}
-**Show this!** For GLMs with canonical links, we have $\theta_i''(\eta_i)=0$ thus the second term in negative Hessian vanishes. It's immediate that the negative Hessian is positive semidefinte and Newton's algorithm with line search is stable. 
+**Show this in HW3**. For GLMs with canonical links, we have $\theta_i''(\eta_i)=0$ thus the second term in negative Hessian vanishes. It's immediate that the negative Hessian is positive semidefinte and Newton's algorithm with line search is stable. 
 
 - How about non-canonical link? We use the expected (Fisher) information matrix
 $$
   \mathbb{E} [- \nabla^2 \ell(\boldsymbol{\beta})] = \sum_{i=1}^n \frac{[\mu_i'(\eta_i)]^2}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T = \mathbf{X}^T \mathbf{W} \mathbf{X} \succeq 0,
 $$
-where $\mathbf{W} = \text{diag}([\mu_i'(\eta_i)]^2/\sigma_i^2)$. This leads to the **Fishering scoring algorithm**. 
+where $\mathbf{W} = \text{diag}([\mu_i'(\eta_i)]^2/\sigma_i^2)$. This is called the **Fishering scoring algorithm**. 
 
 - Take the logistic regression as an example
 \begin{eqnarray*}
@@ -187,29 +187,30 @@ where
 $$
   \mathbf{z}^{(t)} = \mathbf{X} \boldsymbol{\beta}^{(t)} + s (\mathbf{W}^{(t)})^{-1} (\mathbf{y} - \mathbf{p}^{(t)})
 $$
-are *working responses*. In this sense, the Fisher scoring algorithm for GLM is also called the **IRWLS (ieteratively reweighted least squares)**.
+are **working responses**. In this sense, the Fisher scoring algorithm for GLM is also called the **IRWLS (iteratively reweighted least squares)**.
+
+- After finding the MLE $\widehat{\boldsymbol{\beta}}$, the variance is obtained by
+$$
+\operatorname{Var} \widehat{\boldsymbol{\beta}} = \widehat{\phi} (\mathbf{X}^T \mathbf{W} \mathbf{X})^{-1}.
+$$
 
 ## Hypothesis testing
 
-- When considering the choice of model for some data, two extremes are the **null or intercept-only model** and the **full or saturated** model. 
+- When considering the choice of model for data, two extremes are the **null or intercept-only model** and the **full or saturated** model. 
 
     * The **null model** means there's no relation between predictors and the response. Usually it means we fit a common mean $\mu$ for all $y$.  
 
-    * The **full model** means data is explaine exactly. Typically it means we need to use $n$ parameters for $n$ data points.
+    * The **full model** means data is explained exactly. Typically it means we need to use $n$ parameters for $n$ data points.
 
-- To assess the **goodness of fit** of a model, we might consider likelihood ratio statistic:
+- To assess the **goodness of fit** of a model, we might consider likelihood ratio test. For independent observations from exponential family with $a_i(\phi) = \phi$, this simplifies to
 $$
-  2 [\ell(y, \phi \mid y) - \ell(\hat \mu, \phi \mid y)]
+  \frac{D(\mathbf{y}, \widehat{\boldsymbol{\mu}})}{\phi} = \frac{2 \sum_i [y_i(\tilde \theta_i - \hat \theta_i) - b(\tilde \theta_i) + b(\hat \theta_i)]}{\phi},
 $$
-For independent observations from exponential family with $a_i(\phi) = \phi$, this simplifies to
-$$
-  \frac{D(y, \hat \mu)}{\phi} = \frac{2 \sum_i [y_i(\tilde \theta_i - \hat \theta_i) - b(\tilde \theta_i) + b(\hat \theta_i)]}{\phi},
-$$
-where $\tilde \theta$ are the estimates under the full model and $\hat \theta$ are the estimates under the model of interest. $D(y, \hat \mu)$ is called the **deviance** and $D(y, \hat \mu) / \phi$ is the **scaled deviance**.
+where $\tilde \theta$ are the estimates under the full model and $\hat \theta$ are the estimates under the model of interest. $D(\mathbf{y}, \widehat{\boldsymbol{\mu}})$ is called the **deviance** and $D(\mathbf{y}, \widehat{\boldsymbol{\mu}}) / \phi$ is the **scaled deviance**.
 
 - An alternative measure of goodness of fit is the **Pearson's $X^2$ statistic**
 $$
-  X^2 = \sum_i \frac{(y_i - \hat \mu_i)^2}{\mathbb{Var}(\hat \mu_i)}.
+  X^2 = \sum_i \frac{(y_i - \hat \mu_i)^2}{\operatorname{Var}(\hat \mu_i)}.
 $$
 
 | GLM              | Deviance                                                                             |
@@ -219,7 +220,7 @@ $$
 | Binomial         | $2 \sum_i [y_i \log(y_i / \hat \mu_i) + (n_i - y_i) \log((n_i - y_i)/(n_i - \hat \mu_i))]$ |
 | Gamma            | $2 \sum_i [- \log(y_i / \hat \mu_i) + (y_i - \hat \mu_i) / \hat \mu_i]$              |
 | Inverse Gaussian | $\sum_i (y_i - \hat \mu_i)^2 / (\hat \mu_i^2 y_i)$                                   |
-- For *goodness of fit* test, we use the fact that, under certain conditions, provided the model is correct, the scalled Deviance and the Pearson's $X^2$ statistic are both asymptotically $\chi^2$ with degrees of freedom equal to the number of identifiable parameters.
+- For *goodness of fit* test, we use the fact that, under certain conditions, provided the model is correct, the scaled Deviance and the Pearson's $X^2$ statistic are both asymptotically $\chi^2$ with degrees of freedom equal to the difference of the numbers of identifiable parameters.
 
 - For Gaussian, $\phi$ is unknown so this test cannot be used. For binomial and Poisson, $\phi=1$ so the test is practical. However the accuracy of asymptotic approximation is dubious for smaller batch sizes. For binary responses, the approximation is worthless. 
 
@@ -229,13 +230,20 @@ $$
 $$
 where $\hat \phi = X^2 / (n-p)$ is a good estimate of the dispersion. For Gaussian, the F-test is exact. For other models, the F-test is approximate.
 
+- Recall the insecticide data `bliss` we used for binomial regression. The goodness of fit test by analysis deviance shows that this model fits data well. Comparing the fit to the null model also shows that the predictor `conc` is highly significant.
+```{r}
+bliss
+modl <- glm(cbind(dead, alive) ~ conc, family = binomial, data = bliss)
+summary(modl)
+```
+
 ## Diagnostics
 
 ### Residuals
 
 - **Pearson residual**
 $$
-  r_p = \frac{y - \hat \mu}{\sqrt{\mathbb{Var}(\hat \mu)}}.
+  r_p = \frac{y - \hat \mu}{\sqrt{\operatorname{Var}(\hat \mu)}}.
 $$
 - **Deviance residual**
 $$
@@ -243,28 +251,27 @@ $$
 $$
 where $d_i$ are summands in the calculation of deviance.
 
+- These are different kinds of residuals from the Binomial regression of the intesticide data `bliss`.
 ```{r}
-data(bliss)
-modl <- glm(cbind(dead, alive) ~ conc, family = binomial, data = bliss)
-residuals(modl) # deviance residuals
-residuals(modl, "pearson") # Pearson residuals
-residuals(modl, "response") # response - fitted values
-residuals(modl, "working") # working response
-modl$residuals # same as working residuals
+residuals(modl, type = "deviance") # deviance residuals
+residuals(modl, type = "pearson") # Pearson residuals
+residuals(modl, type = "response") # response - fitted values
+residuals(modl, type = "working") # working response
 ```
 We mostly use the deviance residuals for diagnostics.
 
 ### Leverage and influence
 
-- For GLM, the hat matrix is
+- For GLM, the **hat matrix** is
 $$
   \mathbf{H} = \mathbf{W}^{1/2} \mathbf{X} (\mathbf{X}^T \mathbf{W} \mathbf{X})^{-1} \mathbf{X}^T \mathbf{W}^{1/2},
 $$
-where $\mathbf{W}$ is the weight matrix at the fitted model. Diagonal elements of $H$ are the leverages $h_i$. A larger value of leverage indicates that the fit may be sensitive to the response at case $i$. Its predictor values are unusual in some way. 
+where $\mathbf{W}$ is the weight matrix at the fitted model. Diagonal elements of $\mathbf{H}$ are the leverages $h_i$. A larger value of leverage indicates that the fit may be sensitive to the response at case $i$. Its predictor values are unusual in some way. 
 ```{r}
 influence(modl)$hat
 ```
-The studentized residuals are
+
+- The **studentized residuals** are
 $$
   r_{SD} = \frac{r_D}{\sqrt{\hat \phi (1 - h_i)}}.
 $$
@@ -272,13 +279,14 @@ $$
 rstudent(modl)
 ```
 
-Leverage only measures the potential to affect the fit whereas measures of influecen more directly access the effect of each case on the fit. 
+- Leverage only measures the potential to affect the fit whereas measures of **influence** (change in coefficients if we omit a case) more directly access the effect of each case on the fit. 
 ```{r}
 influence(modl)$coef
 ```
-Alternatively we can examine the Cook statistics
+
+- Alternatively we can examine the **Cook statistics**
 $$
-  D_i = \frac{(\hat{\boldsymbol{\beta}}_{(i)} - \hat{\boldsymbol{\beta}})^T (\mathbf{X}^T \mathbf{W} \mathbf{X}) (\hat{\boldsymbol{\beta}}_{(i)} - \hat{\boldsymbol{\beta}})}{p \hat \phi}.
+  D_i = \frac{(\widehat{\boldsymbol{\beta}}_{(i)} - \widehat{\boldsymbol{\beta}})^T (\mathbf{X}^T \mathbf{W} \mathbf{X}) (\widehat{\boldsymbol{\beta}}_{(i)} - \widehat{\boldsymbol{\beta}})}{p \widehat \phi}.
 $$
 ```{r}
 cooks.distance(modl)
@@ -286,24 +294,79 @@ cooks.distance(modl)
 
 ### Residual plots
 
-- For GLM, it's better to plot the linear predictors $\hat \eta$ rather than the predicted responses. We take a look at a Poisson regression example on the Galapagos data.
+- We revisit Poisson regression example on the Galápagos data.
 ```{r}
-data(gala)
-gala
-gala <- gala[, -2]
-modp <- glm(Species ~ ., family = poisson, gala)
-plot(residuals(modp) ~ predict(modp, type = "response"), xlab = expression(hat(mu)), ylab = "Deviance residuals")
-plot(residuals(modp) ~ predict(modp, type = "link"), xlab = expression(hat(mu)), ylab = "Deviance residuals")
-plot(residuals(modp, type = "response") ~ predict(modp, type = "link"), xlab = expression(hat(eta)), ylab = "Response residuals")
+gala <- as_tibble(gala, rownames = "Island") %>%
+  print(n = Inf)
+modp <- glm(Species ~ . - Endemics - Island, family = poisson, data = gala)
+summary(modp)
 ```
 
-Q-Q plot of the residuals is the standard way to check the normality assumption on the errors. For GLM, it's better use a half-normal plot that compares the sorted absolute residuals and the quantiles of the half-normal distribution
+- For GLM, it's better to plot the deviance residuals against the linear predictors $\widehat{\eta}$ rather than the predicted responses. We expect to see a constant variance of the deviance residuals.
+```{r}
+gala %>%
+  mutate(devres  = residuals(modp, type = "deviance"),
+         linpred = predict(modp, type = "link")) %>%
+  ggplot() + 
+  geom_point(mapping = aes(x = linpred, y = devres)) + 
+  labs(x = expression(hat(eta)), y = "Deviance residual")
+```
+If we plot response residuals $y_i - \widehat{\mu}_i$ against the linear predictor $\widehat{\eta}$, then we see variance increases with $\widehat{\mu}$ which is consistent with a Poisson model.
+```{r}
+gala %>%
+  mutate(resres  = residuals(modp, type = "response"),
+         linpred = predict(modp, type = "link")) %>%
+  ggplot() + 
+  geom_point(mapping = aes(x = linpred, y = resres)) + 
+  labs(x = expression(hat(eta)), y = "Response residual")
+```
+
+### Check linearity of predictors
+
+- Let's plot the response `Species` against the predictor `Area`. We see majority of islands have a small area with a few exceptions.
+```{r}
+gala %>%
+  ggplot() + 
+  geom_point(mapping = aes(x = Area, y = Species))
+```
+
+- Log transform of `Area` reveals a curvilinear relationship.
+```{r}
+gala %>%
+  ggplot() + 
+  geom_point(mapping = aes(x = log(Area), y = Species))
+```
+
+- Poisson regression uses a log link, which needs to be taken into account. Plotting the linearized response (working response)
+$$
+z = \eta + (y - \mu) \frac{d\eta}{d \mu}
+$$
+against log(Area) shows a linear relationship.
+```{r}
+gala %>%
+  mutate(eta = predict(modp, type = "link"),
+         mu  = predict(modp, type = "response"),
+         res = residuals(modp, type = "response")) %>%
+  ggplot() + 
+  geom_point(mapping = aes(x = log(Area), y = eta + res / mu)) + 
+  labs(x = "log(Area)", y = "Linearized response")
+```
+
+- From the same reasoning, we fit a model with log transformation of all predictors. We see a substantial reduction in deviance. 
+```{r}
+modpl <- glm(Species ~ log(Area) + log(Elevation) + log(Nearest) + log(Scruz + 0.5) + log(Adjacent), family = poisson, data = gala)
+summary(modpl)
+```
+
+### Half normal plot
+
+- Q-Q plot of the residuals is the standard way to check the normality assumption on the errors. For GLM, it's better use a half-normal plot that compares the sorted absolute residuals and the quantiles of the half-normal distribution
 $$
   \Phi^{-1} \left( \frac{n+i}{2n + i} \right), \quad i=1,\ldots,n.
 $$
 The residuals are not expected to be normally distributed, so we are not looking for an approximate straight line. We only seek outliers which may be identified as points off the trend. A half-normal plot is better for this purpose because in a sense the resolution of the plot is doubled by having all the points in one tail.
 ```{r}
-halfnorm(rstudent(modp))
-gali <- influence(modp)
+halfnorm(rstudent(modpl))
+gali <- influence(modpl)
 halfnorm(gali$hat)
 ```
