change midterm schedule

--- a/_posts/2020-04-28-week5-day1.md
+++ b/_posts/2020-04-28-week5-day1.md
@@ -14,6 +14,6 @@ category: biostat200Cspring2020
 
 * HW3 posted. Due 5/8.
 
-* Midterm (take home) in Week 7. 
+* Midterm (in class, open book) in Week 7. 
 
 * Final exam (take home) distributed in week 10 and due in the final week. 
