--- a/slides/09-glm/glm.Rmd
+++ b/slides/09-glm/glm.Rmd
@@ -154,13 +154,13 @@ $$
 $$
   \boldsymbol{\beta}^{(t+1)} = \boldsymbol{\beta}^{(t)} + s [- \nabla^2 \ell(\boldsymbol{\beta}^{(t)})]^{-1} \nabla \ell(\boldsymbol{\beta}^{(t)}),
 $$
-where $s>0$ is a step length, $\nabla L$ is the score (gradient) vector, and $-\nabla^2L$ is the observed information matrix (negative Hessian). 
+where $s>0$ is a step length, $\nabla \ell$ is the **score (gradient) vector**, and $-\nabla^2 \ell$ is the **observed information matrix** (negative Hessian). 
 
 - For GLM, 
 \begin{eqnarray*}
   \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \frac{y_i \theta_i - b(\theta_i)}{a(\phi)} + c(y_i, \phi) \\
   \nabla \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \frac{(y_i - \mu_i) \mu_i'(\eta_i)}{\sigma_i^2} \mathbf{x}_i \\
-  - \nabla^2 \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \frac{[\mu_i'(\eta_i)]^2}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T - \sum_{i=1}^n \frac{(y_i - \mu_i) \theta_i''(\eta_i)}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T
+  - \nabla^2 \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \frac{[\mu_i'(\eta_i)]^2}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T - \sum_{i=1}^n \frac{(y_i - \mu_i) \theta_i''(\eta_i)}{\phi} \mathbf{x}_i \mathbf{x}_i^T
 \end{eqnarray*}
 **Show this in HW3**. For GLMs with canonical links, we have $\theta_i''(\eta_i)=0$ thus the second term in negative Hessian vanishes. It's immediate that the negative Hessian is positive semidefinte and Newton's algorithm with line search is stable. 
 
@@ -168,31 +168,67 @@ where $s>0$ is a step length, $\nabla L$ is the score (gradient) vector, and $-\
 $$
   \mathbb{E} [- \nabla^2 \ell(\boldsymbol{\beta})] = \sum_{i=1}^n \frac{[\mu_i'(\eta_i)]^2}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T = \mathbf{X}^T \mathbf{W} \mathbf{X} \succeq 0,
 $$
-where $\mathbf{W} = \text{diag}([\mu_i'(\eta_i)]^2/\sigma_i^2)$. This is called the **Fishering scoring algorithm**. 
+where $\mathbf{W} = \text{diag}([\mu_i'(\eta_i)]^2/\sigma_i^2)$. This modified Newton-Raphson algorithm is called the **Fishering scoring algorithm**. 
 
-- Take the logistic regression as an example
+- Take the Binomial logistic regression as an example
 \begin{eqnarray*}
-  \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n [y_i \log p_i + (1 - y_i) \log (1 - p_i)] = \sum_{i=1}^n [y_i \mathbf{x}_i^T \boldsymbol{\beta} - \log (1 + e^{\mathbf{x}_i^T \boldsymbol{\beta}})] \\
-  \nabla \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \left( y_i \mathbf{x}_i - \frac{\exp \mathbf{x}_i^T \boldsymbol{\beta}}{1 + \exp \mathbf{x}_i^T \boldsymbol{\beta}} \mathbf{x}_i \right) = \sum_{i=1}^n (y_i - p_i) \mathbf{x}_i = \mathbf{X}^T (\mathbf{y} - \mathbf{p}) \\
-  - \nabla^2 \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n p_i (1 - p_i) \mathbf{x}_i \mathbf{x}_i^T = \mathbf{X}^T \mathbf{W} \mathbf{X}, \quad \mathbf{W} = \text{diag}(w_1, \ldots, w_n), w_i = p_i (1 - p_i) \\
+  \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n [y_i \log p_i + (n_i - y_i) \log (1 - p_i)] = \sum_{i=1}^n [y_i \mathbf{x}_i^T \boldsymbol{\beta} - n_i \log (1 + e^{\mathbf{x}_i^T \boldsymbol{\beta}})] \\
+  \nabla \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n \left( y_i \mathbf{x}_i - n_i \frac{\exp \mathbf{x}_i^T \boldsymbol{\beta}}{1 + \exp \mathbf{x}_i^T \boldsymbol{\beta}} \mathbf{x}_i \right) = \sum_{i=1}^n (y_i - n_i p_i) \mathbf{x}_i = \mathbf{X}^T (\mathbf{y} - \widehat{\boldsymbol{\mu}}) \\
+  - \nabla^2 \ell(\boldsymbol{\beta}) &=& \sum_{i=1}^n n_i p_i (1 - p_i) \mathbf{x}_i \mathbf{x}_i^T = \mathbf{X}^T \mathbf{W} \mathbf{X}, \quad \mathbf{W} = \text{diag}(w_1, \ldots, w_n), w_i = n_i p_i (1 - p_i) \\
   \mathbb{E} [- \nabla^2 \ell(\boldsymbol{\beta})] &=& - \nabla^2 \ell(\boldsymbol{\beta}).
 \end{eqnarray*}
 The Fisher scoring algorithmn proceeds as
 \begin{eqnarray*}
-  \boldsymbol{\beta}^{(t+1)} &=& \boldsymbol{\beta}^{(t)} + s(\mathbf{X}^T \mathbf{W}^{(t)} \mathbf{X})^{-1} \mathbf{X}^T (\mathbf{y} - \mathbf{p}^{(t)}) \\
-  &=& (\mathbf{X}^T \mathbf{W}^{(t)} \mathbf{X})^{-1} \mathbf{X}^T \mathbf{W}^{(t)} [\mathbf{X} \boldsymbol{\beta}^{(t)} + s (\mathbf{W}^{(t)})^{-1} (\mathbf{y} - \mathbf{p}^{(t)})] \\
+  \boldsymbol{\beta}^{(t+1)} &=& \boldsymbol{\beta}^{(t)} + s(\mathbf{X}^T \mathbf{W}^{(t)} \mathbf{X})^{-1} \mathbf{X}^T (\mathbf{y} - \widehat{\boldsymbol{\mu}}^{(t)}) \\
+  &=& (\mathbf{X}^T \mathbf{W}^{(t)} \mathbf{X})^{-1} \mathbf{X}^T \mathbf{W}^{(t)} [\mathbf{X} \boldsymbol{\beta}^{(t)} + s (\mathbf{W}^{(t)})^{-1} (\mathbf{y} - \widehat{\boldsymbol{\mu}}^{(t)})] \\
   &=& (\mathbf{X}^T \mathbf{W}^{(t)} \mathbf{X})^{-1} \mathbf{X}^T \mathbf{W}^{(t)} \mathbf{z}^{(t)},
 \end{eqnarray*} 
 where
 $$
-  \mathbf{z}^{(t)} = \mathbf{X} \boldsymbol{\beta}^{(t)} + s (\mathbf{W}^{(t)})^{-1} (\mathbf{y} - \mathbf{p}^{(t)})
+  \mathbf{z}^{(t)} = \mathbf{X} \boldsymbol{\beta}^{(t)} + s (\mathbf{W}^{(t)})^{-1} (\mathbf{y} - \widehat{\boldsymbol{\mu}}^{(t)})
 $$
 are **working responses**. In this sense, the Fisher scoring algorithm for GLM is also called the **IRWLS (iteratively reweighted least squares)**.
+
+- Recall the insecticide data `bliss` we used for binomial regression.
+```{r}
+bliss
+```
+Let's manually implement the first iteration of the Fisher scoring algorithm.
+```{r}
+p <- bliss$dead / 30
+eta <- logit(p)
+z <- eta
+w <- 30 * p * (1 - p)
+lmod <- lm(z ~ conc, weights = w, data = bliss)
+coef(lmod)
+```
+The Fisher scoring algorithm converges quickly after a few iterations.
+```{r}
+y = bliss$dead
+for (iter in 1:5) {
+  eta <- lmod$fit
+  p <- ilogit(eta)
+  w <- 30 * p * (1 - p)
+  z <- eta + (y - 30 * p) / w
+  lmod <- lm(z ~ conc, weights = w, data = bliss)
+  cat(iter, coef(lmod), "\n")
+}
+```
+Compare to the glm fit.
+```{r}
+glm(cbind(dead, alive) ~ conc, family = binomial, data = bliss) %>%
+  summary()
+```
 
 - After finding the MLE $\widehat{\boldsymbol{\beta}}$, the variance is obtained by
 $$
 \operatorname{Var} \widehat{\boldsymbol{\beta}} = \widehat{\phi} (\mathbf{X}^T \mathbf{W} \mathbf{X})^{-1}.
 $$
+```{r}
+xm <- model.matrix(lmod)
+wm <- diag(w)
+sqrt(diag(solve(t(xm) %*% wm %*% xm)))
+```
 
 ## Hypothesis testing
 
@@ -370,3 +406,35 @@ halfnorm(rstudent(modpl))
 gali <- influence(modpl)
 halfnorm(gali$hat)
 ```
+
+## Sandwich estimation
+
+- To illustrate with the linear model, suppose we relax the assumption of the linear regression model $\mathbf{Y} \sim \text{N}(\mathbf{X} \boldsymbol{\beta}, \sigma^2 \mathbf{I})$ to
+$$
+\mathbf{Y} \sim \text{N}(\mathbf{X} \boldsymbol{\beta}, \boldsymbol{\Omega}),
+$$
+where $\boldsymbol{\Omega}$ is an unknow covariance matrix. We still use the least squares solution estimate
+$$
+\widehat{\boldsymbol{\beta}} = (\mathbf{X}^T \mathbf{X})^{-1} \mathbf{X}^T \mathbf{y}.
+$$
+Then
+$$
+\operatorname{Var} \widehat{\boldsymbol{\beta}} = (\mathbf{X}^T \mathbf{X})^{-1} (\mathbf{X}^T \boldsymbol{\Omega} \mathbf{X}) (\mathbf{X}^T \mathbf{X})^{-1}.
+$$
+
+- For correct inference, we would like to plug in an estimate of $\boldsymbol{\Omega}$ and use this **sandwich estimator**.
+
+- Generalization to GLM is similar.
+
+```{r}
+library(sandwich)
+glm(Species ~ . - Endemics - Island, family = poisson, data = gala) %>%
+  vcovHC() %>%
+  diag() %>%
+  sqrt()
+```
+Standard errors are closer to those from the overdispersion Poisson model.
+
+## Robust estimation
+
+
